[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/m6x11.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menu/Menu.gd" type="Script" id=2]


[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[node name="AboutMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.667419
margin_bottom = 0.667419
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 412.0
margin_top = 255.0
margin_right = 612.0
margin_bottom = 345.0
rect_min_size = Vector2( 200, 30 )
custom_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "fahri-r"
align = 1

[node name="MainMenu" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 200.0
margin_bottom = 90.0
rect_min_size = Vector2( 200, 40 )
text = "Back to Main Menu"
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
