[gd_scene load_steps=2 format=2]

[ext_resource path="res://menu/Menu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.667419
margin_bottom = 0.667419
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 412.0
margin_top = 180.0
margin_right = 612.0
margin_bottom = 420.0
rect_min_size = Vector2( 200, 30 )
custom_constants/separation = 10

[node name="NewGame" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
text = "New Game"

[node name="SelectLevel" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 200.0
margin_bottom = 90.0
rect_min_size = Vector2( 200, 40 )
text = "Select Level"

[node name="Control" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 200.0
margin_bottom = 140.0
rect_min_size = Vector2( 200, 40 )
text = "Control"

[node name="About" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 200.0
margin_bottom = 190.0
rect_min_size = Vector2( 200, 40 )
text = "About"

[node name="QuitGame" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 200.0
margin_right = 200.0
margin_bottom = 240.0
rect_min_size = Vector2( 200, 40 )
text = "Quit Game"
[connection signal="pressed" from="CenterContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SelectLevel" to="." method="_on_SelectLevel_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Control" to="." method="_on_Control_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitGame" to="." method="_on_QuitGame_pressed"]
